@@ -2,7 +2,7 @@
     --eggshell: #F2F2F2;
     --ekho_blue: #018CCF;
     --ekho_orange: #FDB414;
-    --ekho_gray: #4C4D4F;
+    --ekho_gray: rgb(56, 56, 58);
 }
 
 .button {
@@ -14,7 +14,7 @@
     border-radius: 12px;
     font-size: 2em;
     z-index: 2;
-    margin: 0 auto;
+    margin: 25px auto;
 }
 
 .button:hover {
@@ -49,11 +49,6 @@
     opacity: 0.35;
 }
 
-.left {
-    float: left;
-    margin-left: 50px;
-}
-
 .links {
     display: inline-block;
     margin: 0 auto;
@@ -73,25 +68,17 @@
 }
 
 .mission-statement {
-    color: var(--ekho_gray);
-    font-weight: bold;
-    position: relative;
-    z-index: 2;
-    padding: 25px;
     margin: 15px auto 30px auto;
 }
 
-.right {
-    float: right;
-    margin-right: 50px;
-}
-
 .service {
-    position: realtive;
+    position: relative;
+    border-radius: 12px;
+    background-color: rgba(0,0,0,0.6);
+    color: #f2f2f2;
+    width: 100%;
     height: 80vh;
     margin-top: 10vh;
-    border: solid white;
-    width: 100%;
 }
 
 .services {
@@ -99,6 +86,20 @@
     background: url(../img/wires.jpg) center center no-repeat;
     background-size: cover;
     background-attachment: fixed;
+}
+
+.sub {
+    color: var(--ekho_gray);
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+    font-weight: bold;
+    padding: 25px;
+}
+
+.tagline {
+    text-decoration: underline;
+    margin-bottom: 15px;
 }
 
 .video-header {
@@ -129,8 +130,20 @@
         width: 100%;
     }
 
-    .mission-statement h3 {
+    .mission-statement {
         display: none;
+    }
+
+    .services {
+        height: 200vh;
+    }
+
+    .service {
+        margin: 10vh auto;
+    }
+
+    .tagline {
+        text-decoration: none;
     }
 }
 
@@ -146,11 +159,11 @@
     }
 
     .mission-statement {
-        padding: none;
-        margin: 0 auto;
+        display: none;
     }
 
-    .mission-statement h3 {
-        display: none;
+    .sub {
+        margin: 0 auto;
+        padding: 0;
     }
 }
