@@ -33,13 +33,22 @@
                 </div>
             </div>
             <div class="row">
-                <div class="links col-md-8 col-12">
-                    <a href="" class="button left">Residential</a>
-                    <a href="" class="button right">Commercial</a>
+                <div class="sub col-md-9 col-12">
+                    <h2 class="tagline">Wherever Life Takes You — Stay Connected</h2>
+                    <h3 class="mission-statement">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nulla quisquam nesciunt quae voluptates error expedita eveniet, eum harum soluta.</h3>
                 </div>
+            </div>
+            <div class="row">
+                <a href="" class="button">Learn More</a>
             </div>
         </div>
     </header>
+    <div class="container-fluid services">
+        <div class="row">
+            <div class="service col-md-3 offset-md-2 col-10"></div>
+            <div class="service col-md-3 offset-md-2 col-10"></div>
+        </div>
+    </div>
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
