@@ -63,7 +63,7 @@
                     </div>
                     <div class="product-description">
                         <div class="row">    
-                            <h1>We Help You Reconnect.</h1>
+                            <h1>Wherever Life Takes You —<br> Stay Connected</h1>
                         </div>            
                         <a href="https://ekhocomm.com/collections/car-truck-rv/products/drive-4g-x-470510" class="row">
                             <button class="col-md-2 col-6">See in Store</button>
